Name:                system-topology
Version:             0.1.0
Synopsis:            Tools for determining the CPU/cache topology of a system
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            System
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:   System.Topology,
                     System.Topology.HwlocXML,
                     System.Topology.Lstopo,
                     System.Topology.Types
  Hs-source-dirs:    src
  Build-depends:     base == 4.*,
                     filepath == 1.3.*,
                     process == 1.1.*,
                     temporary == 1.1.*,
                     xml == 1.3.*
  